--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.20.0",
-		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
