--- a/package.json
+++ b/package.json
@@ -20,28 +20,43 @@
 		"preview": "svelte-kit preview",
 		"prepare": "svelte-kit sync",
 		"test": "playwright test",
+		"jest": "jest lib/components/__tests__",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.16.11",
 		"@playwright/test": "^1.20.0",
 		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
+		"@testing-library/jest-dom": "^5.16.3",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"jest": "^27.5.1",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.2.6",
+		"svelte-jester": "^2.3.2",
 		"svelte-preprocess": "^4.10.1",
 		"svelte2tsx": "^0.5.6",
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2"
+	},
+	"jest": {
+		"transform": {
+			"^.+\\.js$": "babel-jest",
+			"^.+\\.svelte$": "svelte-jester"
+		},
+		"moduleFileExtensions": [
+			"js",
+			"svelte"
+		]
 	},
 	"type": "module"
 }
