--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@babel/core": "^7.17.8",
 		"@babel/preset-env": "^7.16.11",
+		"@babel/preset-typescript": "^7.16.7",
 		"@playwright/test": "^1.20.0",
 		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
 		"@testing-library/jest-dom": "^5.16.3",
+		"@testing-library/svelte": "^3.1.0",
+		"@types/jest": "^27.4.1",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
 		"eslint": "^7.32.0",
@@ -45,18 +49,28 @@
 		"svelte-jester": "^2.3.2",
 		"svelte-preprocess": "^4.10.1",
 		"svelte2tsx": "^0.5.6",
+		"ts-jest": "^27.1.4",
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2"
 	},
 	"jest": {
 		"transform": {
 			"^.+\\.js$": "babel-jest",
-			"^.+\\.svelte$": "svelte-jester"
+			"^.+\\.ts$": "ts-jest",
+			"^.+\\.svelte$": [
+				"svelte-jester",
+				{
+					"preprocess": true
+				}
+			]
 		},
 		"moduleFileExtensions": [
 			"js",
+			"ts",
 			"svelte"
-		]
+		],
+		"testEnvironment": "jsdom",
+		"preset": "ts-jest"
 	},
 	"type": "module"
 }
