--- a/package.json
+++ b/package.json
@@ -69,6 +69,9 @@
 			"ts",
 			"svelte"
 		],
+		"testPathIgnorePatterns": [
+			"__testMocks__"
+		],
 		"testEnvironment": "jsdom",
 		"preset": "ts-jest"
 	},
