--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "svelte-vertical-timeline",
 	"license": "MIT",
-	"version": "0.0.2",
+	"version": "1.0.0",
 	"publishConfig": {
 		"access": "public"
 	},
@@ -14,44 +14,40 @@
 		"svelte"
 	],
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"package": "svelte-kit package",
-		"preview": "svelte-kit preview",
-		"prepare": "svelte-kit sync",
+		"dev": "vite dev",
+		"build": "svelte-kit sync && svelte-package",
+		"prepublishOnly": "echo 'Did you mean to publish `./package/`, instead of `./`?' && exit 1",
 		"test": "playwright test",
-		"jest": "jest lib/components/__tests__",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"test:unit": "vitest",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@babel/core": "^7.17.8",
-		"@babel/preset-env": "^7.16.11",
-		"@babel/preset-typescript": "^7.16.7",
-		"@playwright/test": "^1.20.0",
-		"@sveltejs/adapter-vercel": "next",
-		"@sveltejs/kit": "next",
-		"@testing-library/jest-dom": "^5.16.3",
-		"@testing-library/svelte": "^3.1.0",
-		"@types/jest": "^27.4.1",
-		"@typescript-eslint/eslint-plugin": "^5.10.1",
-		"@typescript-eslint/parser": "^5.10.1",
-		"eslint": "^7.32.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^3.2.1",
-		"jest": "^27.5.1",
-		"prettier": "^2.5.1",
-		"prettier-plugin-svelte": "^2.5.0",
-		"svelte": "^3.44.0",
-		"svelte-check": "^2.2.6",
+		"@playwright/test": "^1.30.0",
+		"@sveltejs/adapter-vercel": "^1.0.5",
+		"@sveltejs/kit": "^1.0.0",
+		"@sveltejs/package": "^1.0.0",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/svelte": "^3.2.2",
+		"@types/jest": "^29.4.0",
+		"@typescript-eslint/eslint-plugin": "^5.49.0",
+		"@typescript-eslint/parser": "^5.49.0",
+		"eslint": "^8.33.0",
+		"eslint-config-prettier": "^8.6.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"jest": "^29.4.1",
+		"prettier": "^2.8.3",
+		"prettier-plugin-svelte": "^2.9.0",
+		"svelte": "^3.55.1",
+		"svelte-check": "^3.0.3",
 		"svelte-jester": "^2.3.2",
-		"svelte-preprocess": "^4.10.1",
-		"svelte2tsx": "^0.5.6",
-		"ts-jest": "^27.1.4",
-		"tslib": "^2.3.1",
-		"typescript": "~4.6.2"
+		"svelte2tsx": "^0.6.0",
+		"ts-jest": "^29.0.5",
+		"tslib": "^2.5.0",
+		"typescript": "~4.9.4",
+		"vite": "^4.0.0"
 	},
 	"jest": {
 		"transform": {
