--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "svelte-vertical-timeline",
 	"license": "MIT",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"publishConfig": {
 		"access": "public"
 	},
@@ -26,13 +26,17 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
+	"peerDependencies": {
+		"svelte": "^4.2.16"
+	},
 	"devDependencies": {
 		"@playwright/test": "^1.30.0",
-		"@sveltejs/adapter-vercel": "^1.0.5",
-		"@sveltejs/kit": "^1.0.0",
-		"@sveltejs/package": "^1.0.0",
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/svelte": "^3.2.2",
+		"@sveltejs/adapter-vercel": "^5.3.0",
+		"@sveltejs/kit": "^2.5.7",
+		"@sveltejs/package": "^2.3.1",
+		"@sveltejs/vite-plugin-svelte": "^3.1.0",
+		"@testing-library/jest-dom": "^6.4.5",
+		"@testing-library/svelte": "^5.1.0",
 		"@types/jest": "^29.4.0",
 		"@typescript-eslint/eslint-plugin": "^5.49.0",
 		"@typescript-eslint/parser": "^5.49.0",
@@ -42,14 +46,15 @@
 		"jest": "^29.4.1",
 		"prettier": "^2.8.3",
 		"prettier-plugin-svelte": "^2.9.0",
-		"svelte": "^3.55.1",
+		"svelte": "^4.2.16",
 		"svelte-check": "^3.0.3",
-		"svelte-jester": "^2.3.2",
-		"svelte2tsx": "^0.6.0",
+		"svelte-jester": "^3.0.0",
+		"svelte2tsx": "^0.7.8",
 		"ts-jest": "^29.0.5",
 		"tslib": "^2.5.0",
-		"typescript": "~4.9.4",
-		"vite": "^4.0.0"
+		"typescript": "~5.4.5",
+		"vite": "^5.2.11",
+		"vitest": "^1.6.0"
 	},
 	"jest": {
 		"transform": {
@@ -74,10 +79,13 @@
 		"preset": "ts-jest"
 	},
 	"type": "module",
-	"svelte": "./index.js",
 	"exports": {
 		".": {
-			"svelte": "./index.js"
+			"types": "./dist/index.d.ts",
+			"svelte": "./dist/index.js"
 		}
-	}
+	},
+	"files": [
+		"dist"
+	]
 }
