--- a/package.json
+++ b/package.json
@@ -37,46 +37,21 @@
 		"@sveltejs/vite-plugin-svelte": "^3.1.0",
 		"@testing-library/jest-dom": "^6.4.5",
 		"@testing-library/svelte": "^5.1.0",
-		"@types/jest": "^29.4.0",
 		"@typescript-eslint/eslint-plugin": "^5.49.0",
 		"@typescript-eslint/parser": "^5.49.0",
 		"eslint": "^8.33.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"jest": "^29.4.1",
+		"jsdom": "^24.0.0",
 		"prettier": "^2.8.3",
 		"prettier-plugin-svelte": "^2.9.0",
 		"svelte": "^4.2.16",
 		"svelte-check": "^3.0.3",
-		"svelte-jester": "^3.0.0",
 		"svelte2tsx": "^0.7.8",
-		"ts-jest": "^29.0.5",
 		"tslib": "^2.5.0",
 		"typescript": "~5.4.5",
 		"vite": "^5.2.11",
 		"vitest": "^1.6.0"
-	},
-	"jest": {
-		"transform": {
-			"^.+\\.js$": "babel-jest",
-			"^.+\\.ts$": "ts-jest",
-			"^.+\\.svelte$": [
-				"svelte-jester",
-				{
-					"preprocess": true
-				}
-			]
-		},
-		"moduleFileExtensions": [
-			"js",
-			"ts",
-			"svelte"
-		],
-		"testPathIgnorePatterns": [
-			"__testMocks__"
-		],
-		"testEnvironment": "jsdom",
-		"preset": "ts-jest"
 	},
 	"type": "module",
 	"exports": {
