--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "svelte-vertical-timeline",
 	"license": "MIT",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"publishConfig": {
 		"access": "public"
 	},
@@ -18,7 +18,7 @@
 		"build": "svelte-kit sync && svelte-package",
 		"build:app": "vite build",
 		"preview:app": "vite preview",
-		"prepublishOnly": "echo 'Did you mean to publish `./package/`, instead of `./`?' && exit 1",
+		"prepublishOnly": "yarn run svelte-package",
 		"test": "playwright test",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -62,5 +62,7 @@
 	},
 	"files": [
 		"dist"
-	]
+	],
+	"svelte": "./dist/index.js",
+	"types": "./dist/index.d.ts"
 }
