--- a/package.json
+++ b/package.json
@@ -30,27 +30,27 @@
 		"svelte": "^4.2.16"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.30.0",
-		"@sveltejs/adapter-vercel": "^5.3.0",
-		"@sveltejs/kit": "^2.5.7",
-		"@sveltejs/package": "^2.3.1",
-		"@sveltejs/vite-plugin-svelte": "^3.1.0",
-		"@testing-library/jest-dom": "^6.4.5",
-		"@testing-library/svelte": "^5.1.0",
+		"@playwright/test": "^1.48.2",
+		"@sveltejs/adapter-vercel": "^5.4.7",
+		"@sveltejs/kit": "^2.8.1",
+		"@sveltejs/package": "^2.3.7",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/svelte": "^5.2.4",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
 		"eslint": "^8.33.0",
 		"eslint-config-prettier": "^8.6.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"eslint-plugin-svelte": "^2.46.0",
 		"jsdom": "^24.0.0",
-		"prettier": "^2.8.3",
-		"prettier-plugin-svelte": "^3.0.0",
-		"svelte": "^4.2.16",
-		"svelte-check": "^3.0.3",
-		"svelte2tsx": "^0.7.8",
+		"prettier": "^3.1.0",
+		"prettier-plugin-svelte": "^3.2.8",
+		"svelte": "^5.2.0",
+		"svelte-check": "^4.0.7",
+		"svelte2tsx": "^0.7.24",
 		"tslib": "^2.5.0",
-		"typescript": "~5.4.5",
-		"vite": "^5.2.11",
+		"typescript": "~5.6.3",
+		"vite": "^5.4.11",
 		"vitest": "^1.6.0"
 	},
 	"type": "module",
